--- a/QLBanHang/WebContent/WEB-INF/web.xml
+++ b/QLBanHang/WebContent/WEB-INF/web.xml
@@ -16,6 +16,20 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
+        </jsp-property-group>
+    </jsp-config>
+
+    <filter-mapping>
+        <filter-name>AdminFilter</filter-name>
+        <url-pattern>/Admin</url-pattern>
+        <url-pattern>/AdminOrder</url-pattern>
+        <url-pattern>/AdminUser</url-pattern>
+    </filter-mapping>
+
     <welcome-file-list>
         <welcome-file>Home</welcome-file>
         <welcome-file>index.html</welcome-file>
